update the user model and implement getting a user
