# api/server/auth/auth.router.ts
@@ -5,6 +5,7 @@ import AuthController from "./auth.controller";
 const AuthRouter = express.Router()
 	.post("/auth/register", AuthController.createUser)
 	.post("/auth/login", AuthController.login)
+	.get("/auth/user/:id", AuthController.getUser)
 	;
 
 export default AuthRouter;
